[gd_scene load_steps=7 format=2]

[ext_resource path="res://Monster.gd" type="Script" id=1]
[ext_resource path="res://obj_skinny_creature.OBJ" type="ArrayMesh" id=2]

[sub_resource type="CapsuleShape" id=1]

[sub_resource type="CapsuleShape" id=2]

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.768627, 0.792157, 0, 1 )

[sub_resource type="CapsuleMesh" id=4]
material = SubResource( 3 )

[node name="Monster" type="KinematicBody"]
script = ExtResource( 1 )

[node name="MonsterMesh" type="MeshInstance" parent="."]
transform = Transform( -0.2, 0, 1.74846e-08, 0, 0.2, 0, -1.74846e-08, 0, -0.2, 0, 2.7, 0 )
mesh = ExtResource( 2 )
material/0 = null

[node name="MonsterCollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.25, 0, 0, 0, -1.09278e-08, -2, 0, 0.25, -8.74228e-08, 0.00100899, -0.00275397, 0.011765 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="FearAura" type="VisibilityNotifier" parent="."]

[node name="AgroTimer" type="Timer" parent="."]

[node name="FearAuraArea" type="Area" parent="."]

[node name="FearCollision" type="CollisionShape" parent="FearAuraArea"]
transform = Transform( 10, 0, 0, 0, -4.37114e-07, -10, 0, 10, -4.37114e-07, 0, 0, 0 )
shape = SubResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="FearAuraArea"]
transform = Transform( 10, 0, 0, 0, -4.37114e-07, -10, 0, 10, -4.37114e-07, 0, 0, 0 )
visible = false
mesh = SubResource( 4 )
material/0 = null
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="AgroTimer" to="." method="_on_AgroTimer_timeout"]
